# SQLand

./: Cargo.toml  README.md
data/: sql_detected_errors.txt  sql_error_based_vecs.txt  sql_time_based_vecs.txt
src/: cli.rs  client.rs  main.rs  utils.rs
