[package]
name = "sqland"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
clap_derive = "4.5.13"
colored = "2.1.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
